<resources>
    <string name="app_name">LvLea</string>

    <string name="action_settings">Settings</string>

    <string name="profile_item">Profile</string>
    <string name="opportunity_item">Opportunity</string>
    <string name="search_item">Search</string>
    <string name="message_item">Message</string>
    <string name="setting_item">Setting</string>
    <string name="log_out_item">Log_out</string>
    <string name="feedback_item">Feedback</string>
    <string name="config_item">Configuration</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>

    <string name="hello_Settings">Hello Setting!</string>
    <string name="hello_Opportunity">Hello Opportunity!</string>
    <string name="hello_Search">Hello Search!</string>
    <string name="hello_Message">Hello Message!</string>
    <string name="hello_log_out">Hello log out!</string>
    <string name="hello_Feedback">Hello Feedback!</string>


<!-- TODO: Remove or change this placeholder text -->

    <string name="btnState">Active</string>
    <string name="tvState">Active</string>
    <string name="Active">Active</string>
    <string name="Inactive">Inactive</string>
    <string name="tvState_header">Active</string>
    <string name="title_activity_main__profile">Main_Profile</string>
    <string name="title_activity_main__settings">Main_Settings</string>
    <string name="title_activity_main__opportunity">Main_Opportunity</string>

    <string name="title_activity_main__message">Main_Message</string>
    <string name="title_activity_main__search">Main_Search</string>
    <string name="title_activity_main__log_out">Main_Log_out</string>
    <string name="title_activity_main__feedback">Main_Feedback</string>
    <string name="email_profile">Email account</string>

    //Log in and registration Button strings
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="log_in">Login</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply to Job</string>

    //Registration strings
    <string name="id">ID</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="retype_password">Retype Password</string>
    <string name="school">School</string>
    <string name="phone_number">Phone Number</string>
    <string name="country">Country</string>
    <string name="birth_day">Birthday</string>

        <string name="Text">Una aplicación orientada a los estudiantes que necesitan un puesto laboral;
El propósito de nuestra aplicación es, poder dar la opción, de que obtengas la experiencia que las
        empresas requieren al ocupar un puesto.
Por esta razón, esta aplicación le dará oportunidad de ganar esa experiencia, por medio de  pasantía,
        vacaciones, servicios profesionales y demás opciones que las empresas necesiten.
En nuestra app se afiliaran diferentes empresas las cuales notificaran una serie de puestos,
        en los cuales usted puede forjar su currículo, Reputación y adquirir experiencia, y porque no,
        asta un posible puesto laboral.</string>
    <string name="title_activity_about_activty">AboutActivty</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_apply">ApplyActivity</string>
</resources>
