<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/id_nav_perfil"
            android:checked="true"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/profile_item" />
        <item
            android:id="@+id/id_nav_oportunity"
            android:icon="@drawable/ic_check_box_black_24dp"
            android:title="@string/opportunity_item" />
        <item
            android:id="@+id/id_nav_message"
            android:icon="@drawable/ic_message_black_48dp"
            android:title="@string/message_item" />
        <item
            android:id="@+id/id_nav_search"
            android:icon="@drawable/ic_pageview_black_24dp"
            android:title="@string/search_item" />
        <!-- Sección de configuración -->
        <item
            android:id="@+id/configuration_section"
            android:title="@string/configuracion_item">
            <menu>
                <item
                    android:id="@+id/id_nav_settings"
                    android:icon="@drawable/ic_settings_applications_black_24dp"
                    android:title="@string/setting_item" />
                <item
                    android:id="@+id/id_nav_log_out"
                    android:icon="@drawable/ic_power_settings_new_black_48dp"
                    android:title="@string/log_out_item" />
                <item
                    android:id="@+id/id_nav_feedback"
                    android:icon="@drawable/ic_feedback_black_48dp"
                    android:title="@string/feedback_item" />
            </menu>
        </item>
    </group>

</menu>
